# vaahai

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.py  test_config.toml  vaahai_review_20250614_024557.md  vaahai_review_20250614_024558.html  vaahai_review_20250614_024624.html  vaahai_review_20250614_024624.md
.claude/: README.md
.claude/commands/: autogen_agent_design.prompt  code_review.prompt  configure_autogen_system.prompt  create_prompt_templates.prompt  fix_suggestion.prompt  implementation_status.prompt  performance_optimization.prompt  plan_next_task.prompt  project_context.prompt  security_audit.prompt  sync_documentation_and_status.prompt  test_autogen_agent.prompt  test_strategy.prompt  think_first_then_act.prompt  update_docs.prompt  update_docs_and_tasks.prompt  update_implementation_status.prompt
.vaahai/: config.toml
ai_docs/: AGENT_ARCHITECTURE.md  AI_CONTEXT.md  AI_INTEGRATION.md  API_REFERENCE.md  ARCHITECTURE.md  BUSINESS_LOGIC.md  CLI_ARCHITECTURE.md  CODE_EXECUTION_SYSTEM.md  CONFIGURATION_SYSTEM.md  DESIGN_PATTERNS.md  DOCUMENTATION_SERVER.md  IMPLEMENTATION_ROADMAP.md  LLM_INTEGRATION.md  README.md  STATIC_ANALYSIS_INTEGRATION.md  TESTING_STRATEGY.md  _sidebar.md  agent_architecture_design.md  architecture.md  autogen_061_message_handling.md  autogen_agent_architecture.md  autogen_conversation_patterns.md  autogen_group_chat.md  autogen_integration_plan.md  autogen_research.md  business_logic.md  cli_architecture.md  cli_libraries_typer_inquirerpy.md  cli_version_flag_implementation.md  code_execution_system.md  config_init_implementation.md  configuration_system.md  implementation_roadmap.md  index.html  static_analysis_integration.md  testing_strategy.md
ai_docs/autogen_examples/: basic_agents.py  docker_execution_agent.py  multi_provider_agents.py
ai_docs/diagrams/: agent_class_hierarchy.md  agent_communication_flow.md  conversation_patterns.md  integration_architecture.md  message_types.md  vaahai_agent_class_hierarchy.md
ai_prompts/: PROJECT_SCOPE.prompt  ai_context.prompt  code_audit.prompt  code_reviewer.prompt  current_task_status.prompt  framework_detector.prompt  language_detector.prompt  pick_next_task.prompt  project_scope.prompt  publish.prompt  think_before_code.prompt  update_docs_and_task_status.prompt  verify_last_task.prompt
docs/: COMMANDS.md  CONFIGURATION.md  CONVERSATION_FLOW.md  MESSAGE_HANDLING.md  README.md  _sidebar.md  agent_configuration.md  autogen_configuration.md  autogen_integration.md  commands.md  configuration.md  getting_started.md  implementation_status.md  index.html  installation.md  language_detection.md  project_structure.md  scanner.md  usage.md
docs/agents/: group_chat_manager.md  hello_world.md  hello_world_agent.md  prompt_management.md
docs/architecture/: agent_architecture.md  cli_architecture.md
docs/cli/: command_groups.md  command_template.py  config_command.md  config_validation.md  console_utilities.md  custom_help_formatting.md  dev_review_command.md  index.md  (+6 more)
examples/: agent_factory_example.py  agent_implementation_example.py  agent_usage_example.py  autogen_061_example.py  autogen_config_example.json  config_example.py  config_management_example.py  config_validation_example.py  dev_review_example.py  framework_detection_example.py  group_chat_manager_example.py  hello_world_agent_example.py  html_reporter_example.py  interactive_diff_reporter_example.py  key_findings_example.py  language_detection_example.py  llm_provider_example.py  load_autogen_config.py  load_config_from_file.py  markdown_reporter_example.py  model_selection_example.py  prompt_manager_example.py  review_steps_example.py  test_config_file.py  test_review_file.py  test_review_progress.py  test_review_statistics.py  tool_registry_example.py
scripts/: fix_remaining_test_failures.py  fix_test_failures.py  fix_test_imports.py  fix_test_imports_after_restructure.py  merge_test_directories.py  run_test_merge.sh  standardize_filenames.py
specs/: CONFIGURATION_SCHEMA.md  FEATURES.md  IMPLEMENTATION_PLAN_CONFIG_INIT.md  IMPLEMENTATION_PLAN_P1_T16.md  IMPLEMENTATION_PLAN_P1_T18.md  IMPLEMENTATION_PLAN_PHASE2_FIRST_TASKS.md  PRODUCT_REQUIREMENTS.md  PROJECT_SCOPE.md  README.md  TASK_TRACKING.md  TECHNICAL_ARCHITECTURE.md  _sidebar.md  implementation_plan_autogen.md  implementation_plan_autogen_detailed.md  implementation_plan_config_init.md  implementation_plan_p1_t16.md  index.html  project_plan.md  task_tracking.md
tests/: __init__.py  conftest.py  test_agent_architecture.py  test_autogen_config.py  test_cli.py  test_config.py  test_config_loader.py  test_sample.py  test_scanner.py
vaahai/: README.md  __init__.py  __main__.py
(+299 files in other folders)
