[tool.poetry]
name = "vaahai"
version = "0.2.19"
description = "A multi AI agent CLI tool using Microsoft Autogen Framework"
authors = ["VaahAI Team <info@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "vaahai"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
typer = "0.4.2"
inquirerpy = "^0.3.4"
rich = "^13.4.2"
python-dotenv = "^1.0.0"
packaging = ">=22.0,<25.0"
click = "8.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
toml = "^0.10.2"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vaahai = "vaahai.cli.main:main"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["vaahai/test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=vaahai --cov-report=term --cov-report=html"

[tool.coverage.run]
source = ["vaahai"]
omit = ["vaahai/test/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
