[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vaahai"
version = "0.2.23"
description = "A multi AI agent CLI tool using Microsoft Autogen Framework"
authors = ["VaahAI Team <info@example.com>"]
readme = "readme.md"
license = "MIT"
packages = [{include = "vaahai"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
typer = "0.4.2"
inquirerpy = ">=0.3.4,<0.4.0"
rich = ">=13.4.2,<14.0.0"
python-dotenv = ">=1.0.0,<2.0.0"
packaging = ">=22.0,<25.0"
click = "8.0.4"
pyautogen = {version = "0.2.0", python = ">=3.10,<3.11"}
setuptools = ">=80.9.0,<81.0.0"
docker = ">=7.1.0,<8.0.0"
tiktoken = ">=0.9.0,<0.10.0"
jsonschema = ">=4.24.0,<5.0.0"
autogen-ext = "==0.6.1"
autogen-extensions = "==0.0.1"
autogen-agentchat = "^0.6.1"
toml = "^0.10.2"
tomli-w = "^1.2.0"
pyyaml = "^6.0.2"
jinja2 = "^3.1.6"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.1,<8.0.0"
black = ">=23.3.0,<24.0.0"
isort = ">=5.12.0,<6.0.0"
flake8 = ">=6.0.0,<7.0.0"
mypy = ">=1.3.0,<2.0.0"
toml = ">=0.10.2,<0.11.0"

[tool.poetry.scripts]
vaahai = "vaahai.cli.main:main"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow running"
]
